--- a/frontend/src/assets/css/dashboard.css
+++ b/frontend/src/assets/css/dashboard.css
@@ -369,6 +369,7 @@
   position: relative;
   flex: 1;
   margin-left: 64px;
+  /* z-index: 1; */
   height: 100vh;
   overflow-y: auto;
   background-color: var(--color-gray-100);
@@ -410,7 +411,7 @@
   padding: 0 var(--space-3);
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 2;
 }
 
 .top-nav-left {
@@ -532,6 +533,7 @@
 
 .page-content {
   padding: var(--space-4);
+  /* z-index: 100000; */
 }
 
 
@@ -562,6 +564,7 @@
   display: flex;
   flex-direction: column;
   color: white;
+  z-index: 1;
 }
 
 .stat-card-1 {
@@ -572,6 +575,7 @@
   display: flex;
   flex-direction: column;
   color: white;
+  z-index: 1;
 }
 
 .stat-card-2 {
@@ -582,6 +586,7 @@
   display: flex;
   flex-direction: column;
   color: white;
+  z-index: 1;
 }
 
 .stat-card-3 {
@@ -591,6 +596,7 @@
   box-shadow: var(--shadow-sm);
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .stat-card-header {
